--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ canvas {
 
 	background-color: rgba(0, 0, 0, 0.7);
 
-  margin-left: 0;
+  margin-left: -280px;
 
   overflow: auto;
   transition: .25s;
